--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "clsx": "^2.1.1",
     "flowbite": "^2.4.1",
     "framer-motion": "^11.2.13",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
+    "swc": "^1.0.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "tw-elements": "^2.0.0"
