--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^1.0.6",
+    "@tabler/icons-react": "^3.12.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.4.1",
     "framer-motion": "^11.2.13",
